--- a/examples/notebooks/appdata/config/config-expansion_vessel_sizing.json
+++ b/examples/notebooks/appdata/config/config-expansion_vessel_sizing.json
@@ -23,7 +23,8 @@
                 "C:\\engDev\\git_mf\\ipyrun\\examples\\notebooks\\appdata\\inputs\\archive\\20200612_1900-jg-inputs-expansion_vessel_sizing.json",
                 "C:\\engDev\\git_mf\\ipyrun\\examples\\notebooks\\appdata\\inputs\\archive\\20200615_2211-jg-inputs-expansion_vessel_sizing.json",
                 "C:\\engDev\\git_mf\\ipyrun\\examples\\notebooks\\appdata\\inputs\\archive\\20200616_1020-jg-inputs-expansion_vessel_sizing.json",
-                "C:\\engDev\\git_mf\\ipyrun\\examples\\notebooks\\appdata\\inputs\\archive\\20200616_1021-jg-inputs-expansion_vessel_sizing.json"
+                "C:\\engDev\\git_mf\\ipyrun\\examples\\notebooks\\appdata\\inputs\\archive\\20200616_1021-jg-inputs-expansion_vessel_sizing.json",
+                "C:\\engDev\\git_mf\\ipyrun\\examples\\notebooks\\appdata\\inputs\\archive\\20200624_1101-jg-inputs-expansion_vessel_sizing.json"
             ]
         },
         "template": {
