Bug fixes in the displaying of new runs

--- a/ipyrun/notebooks/appdata/config/config-eplus_pipework_params.json
+++ b/ipyrun/notebooks/appdata/config/config-eplus_pipework_params.json
@@ -16,7 +16,8 @@
             "fdir": "C:\\engDev\\git_mf\\ipyrun\\ipyrun\\notebooks\\appdata\\inputs",
             "fpths": [
                 "C:\\engDev\\git_mf\\ipyrun\\ipyrun\\notebooks\\appdata\\inputs\\inputs-eplus_pipework_params.csv",
-                "C:\\engDev\\git_mf\\ipyrun\\ipyrun\\notebooks\\appdata\\inputs\\archive\\20200616_1024-jg-inputs-eplus_pipework_params.csv"
+                "C:\\engDev\\git_mf\\ipyrun\\ipyrun\\notebooks\\appdata\\inputs\\archive\\20200616_1024-jg-inputs-eplus_pipework_params.csv",
+                "C:\\engDev\\git_mf\\ipyrun\\ipyrun\\notebooks\\appdata\\inputs\\archive\\20200616_1026-jg-inputs-eplus_pipework_params.csv"
             ]
         },
         "template": {
