Fixed issue with overheating-app.ipynb

--- a/examples/testproject/datadriven/src/appdata/config/config-compare_model_run_file.json
+++ b/examples/testproject/datadriven/src/appdata/config/config-compare_model_run_file.json
@@ -17,7 +17,8 @@
             "fdir": "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs",
             "fpths": [
                 "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\inputs-compare_model_run_file.json",
-                "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\archive\\20200727_0958-RW-inputs-compare_model_run_file.json"
+                "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\archive\\20200727_0958-RW-inputs-compare_model_run_file.json",
+                "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\archive\\20200727_1001-RW-inputs-compare_model_run_file.json"
             ]
         },
         "template": {
