Made Compare Outputs inline. Created new template for Reporting RunApp.

--- a/examples/testproject/datadriven/src/appdata/config/config-compare_model_run_file.json
+++ b/examples/testproject/datadriven/src/appdata/config/config-compare_model_run_file.json
@@ -23,6 +23,7 @@
             "fdir": "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs",
             "fpths": [
                 "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\inputs-compare_model_run_file.json",
+                "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\inputs-compare_model_run_file2.json",
                 "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\archive\\20200727_0958-RW-inputs-compare_model_run_file.json",
                 "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\archive\\20200727_1001-RW-inputs-compare_model_run_file.json",
                 "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\archive\\20200728_1056-RW-inputs-compare_model_run_file.json",
@@ -71,13 +72,16 @@
                 "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\archive\\20200803_1645-RW-inputs-compare_model_run_file.json",
                 "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\archive\\20200803_1648-RW-inputs-compare_model_run_file.json",
                 "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\archive\\20200804_1248-RW-inputs-compare_model_run_file.json",
-                "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\archive\\20200804_1705-RW-inputs-compare_model_run_file.json"
+                "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\archive\\20200804_1705-RW-inputs-compare_model_run_file.json",
+                "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\archive\\20200805_1420-RW-inputs-compare_model_run_file.json",
+                "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\archive\\20200811_1012-RW-inputs-compare_model_run_file.json"
             ]
         },
         "template": {
             "fdir": "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\template_inputs",
             "fpths": [
-                "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\template_inputs\\inputs-compare_model_run_file.json"
+                "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\template_inputs\\inputs-compare_model_run_file.json",
+                "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\template_inputs\\inputs-compare_model_run_file2.json"
             ]
         }
     },
