"script_outputs" changed from being a dict to a list in the last commit. it this commit all instances of "script_outputs" being initialised as a dict have been refactored.
some other minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,11 @@ appdata
 mail-merge
 raw
 interim
+/ipyrun/ipyrun_overheating.ipynb
+/ipyrun/_filecontroller.ipynb
+/ipyrun/_ipydisplayfile.ipynb
+/ipyrun/_ipyeditcsv.ipynb
+/ipyrun/_ipyeditjson.ipynb
+/ipyrun/_runconfig.ipynb
+/ipyrun/ipyrun.ipynb
+/ipyrun/ipyrun_archived.ipynb
