--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,10 @@ interim
 /ipyrun/_runconfig.ipynb
 /ipyrun/ipyrun.ipynb
 /ipyrun/ipyrun_archived.ipynb
+.idea/ipyrun.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
+conda.recipe/conda_build_config.yaml
