--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,7 @@ celerybeat-schedule
 *.sage.py
 
 # dotenv
-.env
+#.env
 
 # virtualenv
 .venv
@@ -102,7 +102,7 @@ ENV/
 .mypy_cache/
 
 # IDE settings
-.vscode/
+#.vscode/
 /examples/testproject/datadriven/notebooks/appdata
 /ipyrun/appdata
 docx-mailmerge
